--- a/configure.in
+++ b/configure.in
@@ -105,7 +105,7 @@ if test x$have_crt_externs = xyes; then
   AC_DEFINE(HAVE_CRT_EXTERNS_H, 1, [whether we have crt_externs.h])
 fi
 
-GETTEXT_PACKAGE=libmate-2.0
+GETTEXT_PACKAGE=libmate
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [The gettext package])
 
