--- a/libmate/libmate-2.0-uninstalled.pc.in
+++ b/libmate/libmate-2.0-uninstalled.pc.in
@@ -7,7 +7,7 @@ libmate_serverdir=@libexecdir@
 Name: libmate
 Description: libmate
 Requires: glib-2.0 libmatecomponent-2.0
-Requires.private: MateCORBA-2.0 mateconf-2.0 @ESD_DEPS@
+Requires.private: MateCORBA-2.0 gio-2.0 @ESD_DEPS@
 Version: @VERSION@
 Libs: ${pc_top_builddir}/${pcfiledir}/libmate-2.la -lpopt
 Cflags: -I${pc_top_builddir}/${pcfiledir}/..
