--- a/libmate/libmate-2.0.pc.in
+++ b/libmate/libmate-2.0.pc.in
@@ -8,7 +8,7 @@ localstatedir=@localstatedir@
 Name: libmate
 Description: libmate
 Requires: glib-2.0 libmatecomponent-2.0
-Requires.private: MateCORBA-2.0 mateconf-2.0 @ESD_DEPS@
+Requires.private: MateCORBA-2.0 gio-2.0 @ESD_DEPS@
 Version: @VERSION@
 Libs: -L${libdir} -lmate-2 -lpopt
 Cflags: -I${includedir}/libmate-2.0
